src/styles.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0; 
  font-family: Verdana, Geneva, Tahoma, sans-serif;}

body {
  font-family: sans-serif;
  margin: 20px;
  padding: 0;
}

h1 {
  margin-top: 0;
  font-size: 22px;
}

h2 {
  margin-top: 0;
  font-size: 20px;
}

h3 {
  margin-top: 0;
  font-size: 18px;
}

h4 {
  margin-top: 0;
  font-size: 16px;
}

h5 {
  margin-top: 0;
  font-size: 14px;
}

h6 {
  margin-top: 0;
  font-size: 12px;
}

code {
  font-size: 1.2em;
}

ul {
  padding-inline-start: 20px;
}

* {
  box-sizing: border-box;
}

body {
  font-family: sans-serif;
  margin: 20px;
  padding: 0;
  background-color: skyblue;
}

.ScienceColumn {
    position:absolute;
    right: 5px;
    width: 30%;
    text-align:left;
	background-color: lightsteelblue;
}

li {
    padding:3px;
}

button {
	padding: 10px;
	cursor: pointer;
	margin: 1px;
	background-color: #000;
	color: #fff;
}

.weather-info {
	margin: 20px;
	background-color: #d8d8d8;
	padding: 40px;
  border-radius: 4px;
  display: flex;
  flex-direction: column;
  gap: 25px;
  align-items: center;
  font-size: 1.4rem;
  width: 66%
}

.anime-quote {
  margin: 20px;
  width: 66%;
}

